blur issue on firefox

--- a/css/style.sass
+++ b/css/style.sass
@@ -206,7 +206,7 @@ footer
   min-height: 60vh
   width: 100%
   background: transparent
-  filter: blur(20px)
+  //filter: blur(20px)
   //white-space: nowrap
 
 #map
